[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/hud_controller.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/Bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/LYCounter.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/ResourceCounter.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/DamageBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/powerup_display.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/engrane_01.png" type="Texture" id=7]
[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=8]
[ext_resource path="res://ui/switch_on.png" type="Texture" id=9]
[ext_resource path="res://scripts/shoot_btn.gd" type="Script" id=10]

[node name="hud" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 4.0
margin_right = 2.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Bar" parent="." index="0" instance=ExtResource( 2 )]

anchor_left = 0.5
anchor_right = 0.5
margin_left = -124.0
margin_right = 124.0

[node name="LYCounter" parent="." index="1" instance=ExtResource( 3 )]

visible = false

[node name="ResourceCounter" parent="." index="2" instance=ExtResource( 4 )]

anchor_left = 1.0
anchor_right = 1.0
margin_left = -117.0
margin_right = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = -474.0
margin_right = 202.0
margin_bottom = -434.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="DamageBar" parent="HBoxContainer" index="0" instance=ExtResource( 5 )]

margin_right = 172.0

[node name="powerup_display" parent="." index="4" instance=ExtResource( 6 )]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 188.0
margin_top = -59.0
margin_right = 388.0
margin_bottom = -2.0

[node name="PauseMenu" type="TouchScreenButton" parent="." index="5"]

position = Vector2( 624.705, 2.0359 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
script = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="shoot_button" type="TouchScreenButton" parent="." index="6"]

visible = false
position = Vector2( 733.232, 343.439 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
script = ExtResource( 10 )
_sections_unfolded = [ "Rect", "Transform" ]

[connection signal="pressed" from="PauseMenu" to="PauseMenu" method="_on_PauseMenu_pressed"]

[connection signal="pressed" from="shoot_button" to="shoot_button" method="_on_shoot_button_pressed"]


